--- a/per-motion-prediction/wandb/run-20240210_205651-wpk5ha5d/files/config.yaml
+++ b/per-motion-prediction/wandb/run-20240210_205651-wpk5ha5d/files/config.yaml
@@ -9,7 +9,7 @@ _wandb:
     huggingface_version: 4.35.2
     is_jupyter_run: true
     is_kaggle_kernel: false
-    start_time: 1707532370.081295
+    start_time: 1707598611.589088
     t:
       1:
       - 1
@@ -21,7 +21,6 @@ _wandb:
       - 55
       - 71
       - 98
-      - 100
       2:
       - 1
       - 5
@@ -32,7 +31,6 @@ _wandb:
       - 55
       - 71
       - 98
-      - 100
       3:
       - 7
       - 23
@@ -49,89 +47,6 @@ _wandb:
     - 1: train/global_step
       6:
       - 3
-    - 1: eval/loss
-      5: 1
-      6:
-      - 1
-    - 1: eval/accuracy
-      5: 1
-      6:
-      - 1
-    - 1: eval/runtime
-      5: 1
-      6:
-      - 1
-    - 1: eval/samples_per_second
-      5: 1
-      6:
-      - 1
-    - 1: eval/steps_per_second
-      5: 1
-      6:
-      - 1
-    - 1: train/epoch
-      5: 1
-      6:
-      - 1
-    - 1: train/train_runtime
-      5: 1
-      6:
-      - 1
-    - 1: train/train_samples_per_second
-      5: 1
-      6:
-      - 1
-    - 1: train/train_steps_per_second
-      5: 1
-      6:
-      - 1
-    - 1: train/total_flos
-      5: 1
-      6:
-      - 1
-    - 1: train/train_loss
-      5: 1
-      6:
-      - 1
-vocab_size:
-  desc: null
-  value: 32000
-max_position_embeddings:
-  desc: null
-  value: 32768
-hidden_size:
-  desc: null
-  value: 4096
-intermediate_size:
-  desc: null
-  value: 14336
-num_hidden_layers:
-  desc: null
-  value: 32
-num_attention_heads:
-  desc: null
-  value: 32
-sliding_window:
-  desc: null
-  value: 4096
-num_key_value_heads:
-  desc: null
-  value: 8
-hidden_act:
-  desc: null
-  value: silu
-initializer_range:
-  desc: null
-  value: 0.02
-rms_norm_eps:
-  desc: null
-  value: 1.0e-05
-use_cache:
-  desc: null
-  value: true
-rope_theta:
-  desc: null
-  value: 10000.0
 return_dict:
   desc: null
   value: true
@@ -146,7 +61,7 @@ torchscript:
   value: false
 torch_dtype:
   desc: null
-  value: bfloat16
+  value: null
 use_bfloat16:
   desc: null
   value: false
@@ -158,7 +73,7 @@ pruned_heads:
   value: {}
 tie_word_embeddings:
   desc: null
-  value: false
+  value: true
 is_encoder_decoder:
   desc: null
   value: false
@@ -255,7 +170,7 @@ begin_suppress_tokens:
 architectures:
   desc: null
   value:
-  - MistralForCausalLM
+  - BertForMaskedLM
 finetuning_task:
   desc: null
   value: null
@@ -264,17 +179,11 @@ id2label:
   value:
     '0': LABEL_0
     '1': LABEL_1
-    '2': LABEL_2
-    '3': LABEL_3
-    '4': LABEL_4
 label2id:
   desc: null
   value:
     LABEL_0: 0
     LABEL_1: 1
-    LABEL_2: 2
-    LABEL_3: 3
-    LABEL_4: 4
 tokenizer_class:
   desc: null
   value: null
@@ -283,13 +192,13 @@ prefix:
   value: null
 bos_token_id:
   desc: null
-  value: 1
+  value: null
 pad_token_id:
   desc: null
-  value: 2
+  value: 0
 eos_token_id:
   desc: null
-  value: 2
+  value: null
 sep_token_id:
   desc: null
   value: null
@@ -304,16 +213,64 @@ problem_type:
   value: null
 _name_or_path:
   desc: null
-  value: mistralai/Mistral-7B-v0.1
+  value: bert-base-cased
 transformers_version:
   desc: null
   value: 4.35.2
+gradient_checkpointing:
+  desc: null
+  value: false
 model_type:
   desc: null
-  value: mistral
+  value: bert
+vocab_size:
+  desc: null
+  value: 28996
+hidden_size:
+  desc: null
+  value: 768
+num_hidden_layers:
+  desc: null
+  value: 12
+num_attention_heads:
+  desc: null
+  value: 12
+hidden_act:
+  desc: null
+  value: gelu
+intermediate_size:
+  desc: null
+  value: 3072
+hidden_dropout_prob:
+  desc: null
+  value: 0.1
+attention_probs_dropout_prob:
+  desc: null
+  value: 0.1
+max_position_embeddings:
+  desc: null
+  value: 512
+type_vocab_size:
+  desc: null
+  value: 2
+initializer_range:
+  desc: null
+  value: 0.02
+layer_norm_eps:
+  desc: null
+  value: 1.0e-12
+position_embedding_type:
+  desc: null
+  value: absolute
+use_cache:
+  desc: null
+  value: true
+classifier_dropout:
+  desc: null
+  value: null
 output_dir:
   desc: null
-  value: test_trainer
+  value: test-trainer
 overwrite_output_dir:
   desc: null
   value: false
@@ -322,22 +279,22 @@ do_train:
   value: false
 do_eval:
   desc: null
-  value: true
+  value: false
 do_predict:
   desc: null
   value: false
 evaluation_strategy:
   desc: null
-  value: epoch
+  value: 'no'
 prediction_loss_only:
   desc: null
   value: false
 per_device_train_batch_size:
   desc: null
-  value: 8
+  value: 16
 per_device_eval_batch_size:
   desc: null
-  value: 8
+  value: 16
 per_gpu_train_batch_size:
   desc: null
   value: null
@@ -355,10 +312,10 @@ eval_delay:
   value: 0
 learning_rate:
   desc: null
-  value: 5.0e-05
+  value: 2.0e-05
 weight_decay:
   desc: null
-  value: 0.0
+  value: 0.01
 adam_beta1:
   desc: null
   value: 0.9
@@ -373,7 +330,7 @@ max_grad_norm:
   value: 1.0
 num_train_epochs:
   desc: null
-  value: 3.0
+  value: 5
 max_steps:
   desc: null
   value: -1
@@ -397,7 +354,7 @@ log_on_each_node:
   value: true
 logging_dir:
   desc: null
-  value: test_trainer/runs/Feb10_02-32-48_watgpu308
+  value: test-trainer/runs/Feb10_20-55-54_watgpu208
 logging_strategy:
   desc: null
   value: steps
@@ -496,7 +453,7 @@ past_index:
   value: -1
 run_name:
   desc: null
-  value: test_trainer
+  value: test-trainer
 disable_tqdm:
   desc: null
   value: false
@@ -595,9 +552,6 @@ hub_private_repo:
   desc: null
   value: false
 hub_always_push:
-  desc: null
-  value: false
-gradient_checkpointing:
   desc: null
   value: false
 gradient_checkpointing_kwargs:
